// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolHeadingFc should apply custom class names 1`] = `
<div class="kol-heading">
  <h1 class="custom-class kol-heading--h1 kol-heading__headline">
    Custom Class Heading
  </h1>
</div>
`;

exports[`KolHeadingFc should render with a secondary headline 1`] = `
<hgroup class="kol-heading">
  <h1 class="kol-heading--h1 kol-heading__headline">
    Main Heading
  </h1>
  <h2 class="kol-heading__secondary-headline">
    Secondary Headline
  </h2>
</hgroup>
`;

exports[`KolHeadingFc should render with a specific level 1`] = `
<div class="kol-heading">
  <h3 class="kol-heading--h3 kol-heading__headline">
    Level 3 Heading
  </h3>
</div>
`;

exports[`KolHeadingFc should render with default props 1`] = `
<div class="kol-heading">
  <h1 class="kol-heading--h1 kol-heading__headline">
    Default Heading
  </h1>
</div>
`;
